Continuando con la eliminación de campos en las formas
Se elimina texto de campo y se cambia propiedad "requerido" a No

--- a/TableroSLAs/PPMCsCumpReqFunDetalle.html
+++ b/TableroSLAs/PPMCsCumpReqFunDetalle.html
@@ -339,7 +339,7 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFFechaSubida">Fecha de liberación</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFFechaSubida"></label></td> 
             <td>
               <!-- BEGIN TextBox FechaSubida --><input type="text" onblur="muestraCheck()" id="mc_info_rs_cr_RFFechaSubida" maxlength="100" size="10" value="{FechaSubida}" name="{FechaSubida_Name}"><!-- END TextBox FechaSubida -->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
               <div id="ListaPDF">
