--- a/TableroSLAs/IncidentesLista.html
+++ b/TableroSLAs/IncidentesLista.html
@@ -27,10 +27,10 @@
 <p>{Header}</p>
 <!-- BEGIN Record mc_info_incidentesSearch -->
 <form id="mc_info_incidentesSearch" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
     <tr>
       <td valign="top">
-        <table class="Header" border="0" cellspacing="0" cellpadding="0">
+        <table class="Header" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
             <td class="th"><strong>Buscar incidente</strong></td> 
@@ -88,7 +88,7 @@
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="14">
-              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_info_incidentesSearchButton_DoSearch" class="Button" value="Buscar" alt="Search" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_info_incidentesSearchButton_DoSearch" class="Button" alt="Search" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
           </tr>
         </table>
       </td>
@@ -97,10 +97,10 @@
 </form>
 <!-- END Record mc_info_incidentesSearch -->
 <!-- BEGIN Grid mc_info_incidentes -->
-<table id="mc_info_incidentes" class="MainTable" border="0" cellspacing="0" cellpadding="0">
+<table id="mc_info_incidentes" class="MainTable" cellspacing="0" cellpadding="0" border="0">
   <tr>
     <td valign="top">
-      <table class="Header" border="0" cellspacing="0" cellpadding="0">
+      <table class="Header" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
           <td class="th"><strong>Lista de incidentes</strong></td> 
