Se crea la generación de nuevo reporte
Se genera reporte de información del universo con los mismos campos que
en cada listado/vista que en TC. Para uso interno de la MC

--- a/TableroSLAs/UniversoDistribucion.html
+++ b/TableroSLAs/UniversoDistribucion.html
@@ -95,6 +95,10 @@
                     <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_c_proveedor_mc_EfPresuButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
                 </tr>
               </table>
+ 
+              <p>&nbsp;</p>
+ 
+              <p><a href="{Link1_Src}" id="mc_c_proveedor_mc_EfPresuLink1">UniversoExcel</a></p>
             </td>
           </tr>
         </table>
