--- a/TableroSLAs/comparativo_rc.html
+++ b/TableroSLAs/comparativo_rc.html
@@ -20,7 +20,7 @@
 
 //End CCS script
 </script>
-<style type='text/css'>
+<style type="text/css">
  
 #Grid1 > tbody > tr > td > table.Grid  >  tbody > tr:nth-child(odd) > td {
     background-color:#f2f2f2;
@@ -38,7 +38,7 @@
 <p>
 <!-- BEGIN Record periodos_carga -->
 <form id="periodos_carga" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+  <table class="MainTable" style="HEIGHT: 158px; WIDTH: 1422px" cellspacing="0" cellpadding="0" border="0">
     <tr>
       <td valign="top">
         <table class="Header" cellspacing="0" cellpadding="0" border="0">
@@ -84,9 +84,10 @@
           </tr>
         </table>
       </td> 
-      <td width="300"></td> 
-      <td colspan="4">
-        <h2><font size="5">COMPARATIVO CAPC / CDS</font> </h2>
+      <td width="20%"></td> 
+      <td colspan="5">
+        <h2><font size="4">COMPARATIVO {Label1}</font></h2>
+        <h2><font size="4">CAPC / ENTREGA SAT CDS's</font></h2>
       </td>
     </tr>
  
@@ -101,8 +102,6 @@
   </table>
 </form>
 <!-- END Record periodos_carga --></p>
-<br>
-<br>
 <table align="center">
   <tr>
     <td>
@@ -110,9 +109,7 @@
     </td>
   </tr>
 </table>
-<p><br>
-<br>
-<br>
+<p>
 <!-- BEGIN Grid Grid1 -->
 <table id="Grid1" class="MainTable" cellspacing="0" cellpadding="0" border="0">
   <tr>
