--- a/TableroSLAs/comparativo.html
+++ b/TableroSLAs/comparativo.html
@@ -62,7 +62,7 @@
 <p>
 <!-- BEGIN Record periodos_carga -->
 <form id="periodos_carga" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+  <table class="MainTable" style="HEIGHT: 158px; WIDTH: 1422px" cellspacing="0" cellpadding="0" border="0">
     <tr>
       <td valign="top">
         <table class="Header" cellspacing="0" cellpadding="0" border="0">
@@ -108,9 +108,10 @@
           </tr>
         </table>
       </td> 
-      <td width="30%"></td> 
-      <td colspan="4">
-        <h2><font size="5">COMPARATIVO CAPC / CDS</font> </h2>
+      <td width="20%"></td> 
+      <td colspan="5">
+        <h2><font size="4">COMPARATIVO {Label1}</font></h2>
+        <h2><font size="4">CAPC / ENTREGA SAT CDS's</font></h2>
       </td>
     </tr>
  
@@ -124,9 +125,7 @@
     </tr>
   </table>
 </form>
-<!-- END Record periodos_carga --></p>
-<br>
-<br>
+<!-- END Record periodos_carga -->
 <table align="center">
   <tr>
     <td>
@@ -134,6 +133,7 @@
     </td>
   </tr>
 </table>
+</p>
 <p>
 <!-- BEGIN Grid Grid1 -->
 <table id="Grid1" class="MainTable" cellspacing="0" cellpadding="0" border="0">
